fix breadcreumbs on mobile. Don't show 'branches' information. under save button on hover

--- a/site.css
+++ b/site.css
@@ -1855,10 +1855,24 @@ upwards using a relative posistion will leave a blnk space where they originally
 	margin-top: 18px;
 }
 
+/* don't show branches */
 .branches {
 	display: none;
 }
 
+/* under when hovering over the save button, like all other clickable things */
 #page input.save:hover {
 	text-decoration: underline;
 }
+
+/* don't leave such a big gap after the summary of an item */
+#renderitem .item .summary {
+	margin: 0 0 0 0;
+}
+
+}
+
+@media only screen and (max-width: 480px), only screen and (max-width: 800px) and (orientation: landscape) {
+	#page #breadCrumb {
+		position:static;
+	}
